--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ python-dateutil==2.8.2
 python-json-logger==2.0.4
 PyYAML==6.0
 pyzmq==25.0.0
+requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 Send2Trash==1.8.0
